[package]
name = "gl-puck"
version = "0.1.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "*"
winit = "*"
glutin = "*"
image = "*"
gl-wrapper = { git = "https://ihvl.go.ro/gitea/Error1000/gl-wrapper.git" }
# Utils
glam = "*"
itertools = "*"
one_user = "*"
bitvec = "*"
lazy_static = "*"

[build-dependencies]
gl_generator = "*"

[profile.dev]
opt-level=2
debug = true

[profile.release]
opt-level=3
lto="fat"
codegen-units = 1


