[package]
name = "gl-puck"
version = "0.1.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "*"
winit = "*"
glutin = "*"
image = "*"
gl-wrapper = { git = "https://github.com/Error1000/gl-wrapper.git" }
# Utils
glam = "*"
one_user = "*"
objld = "*"
rayon = "*"

[build-dependencies]
gl_generator = "*"

[profile.dev]
opt-level=3
debug = true

[profile.release]
opt-level=3
lto="fat"
codegen-units = 1


